# snap-test

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  arm-gnueabi.toolchain.cmake  config.h  configure.ac
autom4te.cache/: output.0  requests  traces.0
libs/openssl/include/openssl/: opensslv.h
libs/openssl/lib64/: libssl.so.3
libs/openssl/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
snapcraft-file/cmake+lib/: snapcraft.yaml
snapcraft-file/cross-compile-raspPi/: raspblizzard_0.1_arm64.snap  snapcraft.yaml
src/: debug.h  main.c
